--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mime-message": "^0.1.3",
     "mime-types": "^2.1.27",
     "mongodb": "^3.5.9",
+    "morgan": "^1.10.0",
     "redis": "^2.8.0",
     "sha1": "^1.1.1",
     "uuid": "^8.2.0"
